--- a/components/components/CardPoem/CardPoem.css
+++ b/components/components/CardPoem/CardPoem.css
@@ -11,6 +11,7 @@
   text-decoration: none;
   transition: box-shadow var(--time-animation) ease, opacity var(--time-animation) ease;
   width: 100%;
+  z-index: 1;
 }
 
 .card-poem:hover {
